--- a/juego1.html
+++ b/juego1.html
@@ -4,9 +4,27 @@
     <meta charset="utf-8">
     <title>Games 2019 - Juego 1</title>
     <link rel="stylesheet" href="css/estilos.css">
+    <style>
+        canvas {
+            display: block;
+            margin: auto;
+            align: center;
+        }
+
+        body {
+            background-color: lightyellow;
+        }
+
+        canvas {
+            border: solid;
+        }
+    </style>
   </head>
   <body>
     <p>Ejemplo de página de juego mínima. Este archivo hay que renombrarlo para el juego que toque.</p>
     <canvas id="juego1" width="1200" height="800"></canvas>
+    <script src="juego1.js">
+    </script>
+    
   </body>
 </html>
