--- a/index.html
+++ b/index.html
@@ -7,13 +7,19 @@
   </head>
   <body>
     <header>
-      <h1>Games 2019</h1>
+      <h1 id=colors>Games 2019</h1>
     </header>
     <main>
       <h2>Juegos</h2>
       <ul>
-        <li><a href="juego1.html">Juego 1</a></li>
+        <li><a href="juego1.html">Juego-1: Ahorcado </a></li>
+         <li><a href="break-block.html">Juego-2: Break-block</a></li>
       </ul>
     </main>
+
+           
+
+
   </body>
+
 </html>
