--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="utf-8">
     <title>Games 2019</title>
     <link rel="stylesheet" href="css/estilos.css">
+    <script type="text/javascript" src="efectos.js"></script>
+
   </head>
   <body>
     <header>
-      <h1 id=colors>Games 2019</h1>
+      <h1 id=colors>Games 2019 !!!</h1>
+ 
     </header>
     <main>
       <h2>Juegos</h2>
