--- a/breack_block.html
+++ b/breack_block.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="es" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>Juegos 2019 :: Breack Block</title>
+    <link rel="stylesheet" href="css/estilos.css">
   </head>
   <body>
     <h2>Breack Block</h2>
