--- a/juego1.html
+++ b/juego1.html
@@ -4,27 +4,25 @@
     <meta charset="utf-8">
     <title>Games 2019 - Juego 1</title>
     <link rel="stylesheet" href="css/estilos.css">
-    <style>
-        canvas {
-            display: block;
-            margin: auto;
-            align: center;
-        }
-
-        body {
-            background-color: lightyellow;
-        }
-
-        canvas {
-            border: solid;
-        }
-    </style>
-  </head>
-  <body>
-    <p>Ejemplo de página de juego mínima. Este archivo hay que renombrarlo para el juego que toque.</p>
-    <canvas id="juego1" width="1200" height="800"></canvas>
-    <script src="juego1.js">
-    </script>
+    <link rel="stylesheet" href="css/Estilos_juegos.css">
+    <script src=efectos.js></script>
     
-  </body>
-</html>
+</head>
+
+<body>
+    <header>
+        <h1 id="colors">Ahorcado!</h1>
+        <div>
+            <p><a href="index.html">Home</a></p>
+        </div>
+        <p>El mítico juego del ahorcado ¡Ahora para PC!</p>
+        <p>¿Por qué usar lápiz y papel cuando puedes sentarte delante de una pantalla durante horas?</p>
+        <p> Requisito para jugar: tener Bloq Mayus activado</p>
+    </header>
+    <canvas id="juego1" width="1200" height="800"></canvas>
+    <script src="js/ranking.js"></script>
+    <script src="js/juego1.js">
+    </script>
+
+
+</body></html>
